// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`psql_crosstab.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "v",
                },
              },
              {
                "String": {
                  "sval": "h",
                },
              },
              {
                "String": {
                  "sval": "c",
                },
              },
              {
                "String": {
                  "sval": "i",
                },
              },
              {
                "String": {
                  "sval": "d",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 37,
              "relname": "ctv_data",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 76,
                          "sval": {
                            "sval": "v1",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 81,
                          "sval": {
                            "sval": "h2",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 86,
                          "sval": {
                            "sval": "foo",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 93,
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 96,
                              "sval": {
                                "sval": "2015-04-01",
                              },
                            },
                          },
                          "location": 108,
                          "typeName": {
                            "location": 110,
                            "names": [
                              {
                                "String": {
                                  "sval": "date",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 121,
                          "sval": {
                            "sval": "v2",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 126,
                          "sval": {
                            "sval": "h1",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 131,
                          "sval": {
                            "sval": "bar",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 138,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 141,
                          "sval": {
                            "sval": "2015-01-02",
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 160,
                          "sval": {
                            "sval": "v1",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 165,
                          "sval": {
                            "sval": "h0",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 170,
                          "sval": {
                            "sval": "baz",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 177,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 183,
                          "sval": {
                            "sval": "2015-07-12",
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 202,
                          "sval": {
                            "sval": "v0",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 207,
                          "sval": {
                            "sval": "h4",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 212,
                          "sval": {
                            "sval": "qux",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 219,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 222,
                          "sval": {
                            "sval": "2015-07-15",
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 241,
                          "sval": {
                            "sval": "v0",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 246,
                          "sval": {
                            "sval": "h4",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 251,
                          "sval": {
                            "sval": "dbl",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 258,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 262,
                          "sval": {
                            "sval": "2014-12-15",
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 281,
                          "sval": {
                            "sval": "v0",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 286,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 291,
                          "sval": {
                            "sval": "qux",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 5,
                          },
                          "location": 298,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 301,
                          "sval": {
                            "sval": "2014-07-15",
                          },
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 320,
                          "sval": {
                            "sval": "v1",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 325,
                          "sval": {
                            "sval": "h2",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 330,
                          "sval": {
                            "sval": "quux",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 7,
                          },
                          "location": 337,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 340,
                          "sval": {
                            "sval": "2015-04-04",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql_crosstab.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VacuumStmt": {
          "rels": [
            {
              "VacuumRelation": {
                "relation": {
                  "inh": true,
                  "location": 36,
                  "relname": "ctv_data",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql_crosstab.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 107,
                "relname": "ctv_data",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 126,
              },
            },
            {
              "A_Const": {
                "ival": {
                  "ival": 2,
                },
                "location": 129,
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 141,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 144,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 67,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "v",
                        },
                      },
                    ],
                    "location": 67,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 70,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 78,
                          "sval": {
                            "sval": "year",
                          },
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "d",
                              },
                            },
                          ],
                          "location": 88,
                        },
                      },
                    ],
                    "funcformat": "COERCE_SQL_SYNTAX",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "extract",
                        },
                      },
                    ],
                    "location": 70,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 92,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 92,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql_crosstab.sql > line 23 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql_crosstab.sql > line 114 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 53,
            "relname": "ctv_data",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "x",
                "is_local": true,
                "location": 63,
                "typeName": {
                  "location": 65,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "y",
                "is_local": true,
                "location": 70,
                "typeName": {
                  "location": 72,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "v",
                "is_local": true,
                "location": 77,
                "typeName": {
                  "location": 79,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql_crosstab.sql > line 117 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "ctv_data",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "x",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 66,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 68,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 50,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 30,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 30,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "x",
                            },
                          },
                        ],
                        "location": 33,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 36,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "location": 36,
                            "sval": {
                              "sval": "*",
                            },
                          },
                        },
                        "location": 40,
                        "name": [
                          {
                            "String": {
                              "sval": "||",
                            },
                          },
                        ],
                        "rexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "x",
                                },
                              },
                            ],
                            "location": 43,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql_crosstab.sql > line 119 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql_crosstab.sql > line 121 1`] = `[Error: syntax error at or near "\\"]`;
